force-app/main/default/objects/TXN_Log_Event__e/TXN_Log_Event__e.object-meta.xml
<CustomObject>
    <label>TXN Log Event</label>
    <pluralLabel>TXN Log Events</pluralLabel>
</CustomObject>