force-app/main/default/objects/TXN_Log_Event__e/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>