force-app/main/default/objects/TXN_Log_Event__e/fields/Field_Changes_JSON__c.field-meta.xml
<CustomField>
    <fullName>Field_Changes_JSON__c</fullName>
    <label>Field Changes JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>