force-app/main/default/objects/TXN_Log_Event__e/fields/Record_Ids__c.field-meta.xml
<CustomField>
    <fullName>Record_Ids__c</fullName>
    <label>Record Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>