force-app/main/default/objects/TXN_Log_Event__e/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>