force-app/main/default/objects/TXN_Log_Event__e/fields/Steps_JSON__c.field-meta.xml
<CustomField>
    <fullName>Steps_JSON__c</fullName>
    <label>Steps JSON</label>
    <length>255</length>
    <type>Text</type>
</CustomField>