force-app/main/default/objects/TXN_Log_Event__e/fields/Total_Duration_ms__c.field-meta.xml
<CustomField>
    <fullName>Total_Duration_ms__c</fullName>
    <label>Total Duration ms</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>