force-app/main/default/objects/TXN_Log_Event__e/fields/Triggered_By_Id__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By_Id__c</fullName>
    <label>Triggered By Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>